@@ -125,10 +125,10 @@ the testrunner.
 
 We have such a simple testsetup already available::
 
-  >>> print open(os.path.join(cavepath, 'simplesetup01.py')).read()
-  import z3c.testsetup
-  test_suite = z3c.testsetup.register_all_tests(
-      'z3c.testsetup.tests.othercave')
+    >>> print open(os.path.join(cavepath, 'simplesetup01.py')).read()
+    import z3c.testsetup
+    test_suite = z3c.testsetup.register_all_tests(
+        'z3c.testsetup.tests.othercave')
 
 This is all we need in simple cases. We use
 
@@ -140,30 +140,28 @@ they are marked approriately.
 
 Let's start the testrunner and see what it gives::
 
-  >>> import sys
-  >>> sys.argv = [sys.argv[0],]
-  >>> defaults = [
-  ...     '--path', cavepath,
-  ...     '--tests-pattern', '^simplesetup01$',
-  ...     ]
-  >>> from z3c.testsetup import testrunner
-  >>> testrunner.run(defaults)
+    >>> import sys
+    >>> sys.argv = [sys.argv[0],]
+    >>> defaults = [
+    ...     '--path', cavepath,
+    ...     '--tests-pattern', '^simplesetup01$',
+    ...     ]
+    >>> from z3c.testsetup import testrunner
+    >>> testrunner.run(defaults)
     Running z3c...layer.DefaultZCMLLayer [...ftesting.zcml] tests:
       Set up z3c...DefaultZCMLLayer [...ftesting.zcml] in N.NNN seconds.
       Ran 3 tests with 0 failures and 0 errors in N.NNN seconds.
     Running z3c...layer.DefaultZCMLLayer [...ftesting2.zcml] tests:
-      Tear down z3c...DefaultZCMLLayer [...ftesting.zcml] ... not supported
-      Running in a subprocess.
+      Tear down z3c...DefaultZCMLLayer [...ftesting.zcml] ...
       Set up z3c...DefaultZCMLLayer [...ftesting2.zcml] in N.NNN seconds.
       Ran 1 tests with 0 failures and 0 errors in N.NNN seconds.
-      Tear down z3c...DefaultZCMLLayer [...ftesting2.zcml] ... not supported
     Running z3c.testsetup.tests.othercave.testing.FunctionalLayer1 tests:
       Running in a subprocess.
       Set up z3c...tests.othercave.testing.FunctionalLayer1 in N.NNN seconds.
       Ran 1 tests with 0 failures and 0 errors in N.NNN seconds.
       Tear down z3c...tests.othercave.testing.FunctionalLayer1 in N.NNN seconds.
     Running z3c.testsetup.tests.othercave.testing.UnitLayer2 tests:
-      Running in a subprocess.
+      Tear down z3c...DefaultZCMLLayer [...ftesting2.zcml] ...
       Set up z3c.testsetup.tests.othercave.testing.UnitLayer1 in N.NNN seconds.
       Set up z3c.testsetup.tests.othercave.testing.UnitLayer2 in N.NNN seconds.
         Running testSetUp of UnitLayer1
@@ -171,14 +169,14 @@ Let's start the testrunner and see what it gives::
         Running testTearDown of UnitLayer2
         Running testTearDown of UnitLayer1
       Ran 1 tests with 0 failures and 0 errors in N.NNN seconds.
+    Running zope.testing.testrunner.layer.UnitTests tests:
       Tear down z3c...tests.othercave.testing.UnitLayer2 in N.NNN seconds.
       Tear down z3c...tests.othercave.testing.UnitLayer1 in N.NNN seconds.
-    Running zope.testing.testrunner.layer.UnitTests tests:
-      Running in a subprocess.
       Set up zope.testing.testrunner.layer.UnitTests in N.NNN seconds.
         Custom setUp for  <DocTest doctest05.txt from ... (2 examples)>
         Custom tearDown for  <DocTest doctest05.txt from ... (2 examples)>
       Ran 7 tests with 0 failures and 0 errors in N.NNN seconds.
+    Tearing down left over layers:
       Tear down zope.testing.testrunner.layer.UnitTests in N.NNN seconds.
     Total: 13 tests, 0 failures, 0 errors in N.NNN seconds.
     False
